# fitusb

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_win.bat  conf.sh  conf_win.bat
include/: help.hpp  main.hpp  os.hpp  ostype.hpp  process.hpp  util.hpp  verbose.hpp  wintool.hpp
src/: main.cpp  os.cpp  ostype.cpp  process.cpp  wintool.cpp
